# marsbro

./: db.sqlite3  main.py  manage.py  pyproject.toml
marsbro/: asgi.py  settings.py  urls.py  wsgi.py
shop/: admin.py  models.py  paystack.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_initial.py
shop/templates/context/: cart.html  product.html
static/banner/: text.html
static/css/: index.css  responsive.css
static/script/: app.js
static/scss/: _mobile.scss  main.scss
static/shop_products/: s-7.avif  wp-2.avif
statics/CACHE/css/: main.98fc9e124adb.css
store/: admin.py  forms.py  models.py  urls.py  validators.py  views.py
store/migrations/: 0001_initial.py
store/templates/auth/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  register.html
store/templates/context/: about.html  contact.html
store/templates/home/: blogs.html  index.html  screens.html
templates/includes/: footer.html  header.html
templates/main/: base.html
