[project]
name = "marsbro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.2",
    "django-allauth[socialaccount]>=65.14.3",
    "django-compressor>=4.6.0",
    "django-libsass>=0.9",
    "django-phonenumber-field[phonenumberslite]>=8.4.0",
    "ngrok>=1.7.0",
    "paystack>=1.5.0",
    "pillow>=12.1.1",
    "psycopg2-binary>=2.9.11",
    "python-decouple>=3.8",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
